[package]
name = "mesos-scheduler-trace-gen"
version = "0.1.0"
authors = ["José Armando García Sancio <jsancio@gmail.com>"]

[dependencies]
docopt = "0.6.70"
docopt_macros = "0.6.70"
rand = "0.3.9"
rustc-serialize = "0.3.15"
time = "0.1.32"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"
